code now works for the first employee